volexc/tests/ui/mapkey_array_of_float.rust.out
Error: invalid map key type: floats cannot be used as map keys
   ╭─[ mapkey_array_of_float.vol:6:13 ]
   │
 6 │     data: {[f32]:string};
   │            ──┬──  
   │              ╰──── floating-point type used here
   │              │    
   │              ╰──── array of invalid type used here
───╯